# sandbox-comparision

./: .env.example  .gitignore  README.md  REPORT.md  pyproject.toml  report.html
adapters/: __init__.py  base.py  e2b_adapter.py  hf_adapter.py  hf_pool_adapter.py  hf_rust_adapter.py  mcp_adapter.py
benchmarks/: _common.py  b01_boot_latency.py  b02_exec_throughput.py  b03_io_throughput.py  b04_concurrent_create.py  b05_concurrent_exec.py  b06_long_running.py  b07_max_provision.py  b08_mcp_concurrency.py  b09_amortized_boot.py  b10_packing_density.py  b11_isolation.py  b12_noisy_neighbor.py  b13_pool_scaleout.py  b14_pool_correctness.py  b15_soak.py
results/: summary_latest.json
results/raw/: b01_boot_latency__e2b.jsonl  b01_boot_latency__hf-pool.jsonl  b01_boot_latency__hf-rust.jsonl  b01_boot_latency__hf.jsonl  b01_boot_latency__mcp.jsonl  b02_exec_throughput__e2b.jsonl  b02_exec_throughput__hf-pool.jsonl  b02_exec_throughput__hf-rust.jsonl  b02_exec_throughput__hf.jsonl  b02_exec_throughput__mcp.jsonl  b03_io_throughput__e2b.jsonl  b03_io_throughput__hf-pool.jsonl  b03_io_throughput__hf-rust.jsonl  b03_io_throughput__hf.jsonl  b03_io_throughput__mcp.jsonl  b04_concurrent_create__e2b.jsonl  b04_concurrent_create__hf-pool.jsonl  b04_concurrent_create__hf-rust.jsonl  b04_concurrent_create__hf.jsonl  b04_concurrent_create__mcp.jsonl  b05_concurrent_exec__e2b.jsonl  b05_concurrent_exec__hf-pool.jsonl  (+20 more)
scripts/: build_html_report.py  plot_results.py  run_e2b.sh  run_hf_pool.sh  run_hf_pr7.sh  run_hf_rust.sh  run_mcp.sh  summarize.py  verify_setup.py
(+6 files in other folders)
