[project]
name = "sandbox-comparison"
version = "0.1.0"
description = "Head-to-head scalability benchmark: hf-sandbox vs E2B vs MCP (CPU-only)."
requires-python = ">=3.11"
dependencies = [
  "e2b>=2.0,<3.0",
  "hf-sandbox>=0.1",
  "huggingface_hub>=1.19",
  "mcp>=1.0",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "matplotlib>=3.8",
  "rich>=13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adapters*", "benchmarks*"]
